# rodosol-telegram-bot

./: .env-example  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: main.yml
kubernetes/: deployment.yaml  kustomization.yaml
src/: main.rs
