[package]
name = "rodosol-telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = {version = "0.15.0"}
# telegram-bot = "0.8.0"
telegram-bot = { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.8"
scraper = "0.12.0"
tokio-compat-02 = "0.2.0"